[tool.poetry]
name = "oldpaint"
version = "0.1.0"
description = ""
authors = ["Johan Forsberg <johan@slentrian.org>"]

[tool.poetry.dependencies]
python = "^3.7"
fogl = {path = "/home/jofo/Sync/progg/fogl"}
cython = "^0.29.14"
euclid3 = "^0.1.0"
imgui = "^1.0"
manhole = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
